--- a/app/src/main/res/layout/activity_catalog.xml
+++ b/app/src/main/res/layout/activity_catalog.xml
@@ -31,9 +31,7 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_margin="@dimen/fab_margin"
-        android:src="@drawable/ic_add_circle"
-        android:tint="@android:color/white"
-        android:backgroundTint="@color/colorPrimary"/>
+        android:src="@drawable/ic_add_white_48dp"/>
 
     <!-- Empty view for the list -->
     <RelativeLayout
