--- a/app/src/main/res/layout/activity_editor.xml
+++ b/app/src/main/res/layout/activity_editor.xml
@@ -43,20 +43,23 @@
                 android:id="@+id/edit_product_name"
                 android:hint="@string/hint_product_name"
                 android:inputType="textCapWords"
-                style="@style/EditorFieldStyle" />
+                style="@style/EditorFieldStyle"
+                android:imeOptions="actionDone"/>
 
             <!-- Price field -->
             <EditText
                 android:id="@+id/edit_product_price"
                 android:hint="@string/hint_product_price"
                 android:inputType="numberDecimal"
-                style="@style/EditorFieldStyle" />
+                style="@style/EditorFieldStyle"
+                android:imeOptions="actionDone"/>
             <!-- Quantity field -->
             <EditText
                 android:id="@+id/edit_product_quantity"
                 android:hint="@string/hint_product_quantity"
                 android:inputType="numberDecimal"
-                style="@style/EditorFieldStyle" />
+                style="@style/EditorFieldStyle"
+                android:imeOptions="actionDone"/>
         </LinearLayout>
     </LinearLayout>
 
@@ -76,7 +79,8 @@
             android:layout_width="0dp"
             android:layout_weight="2"
             android:paddingLeft="4dp"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:imeOptions="actionDone">
 
             <!-- Product Name field -->
             <EditText
@@ -89,16 +93,35 @@
             <EditText
                 android:id="@+id/edit_supplier_email"
                 android:hint="@string/hint_supplier_email"
-                android:inputType="numberDecimal"
-                style="@style/EditorFieldStyle" />
+                android:inputType="textCapWords"
+                style="@style/EditorFieldStyle"
+                android:imeOptions="actionDone"/>
             <!-- Quantity field -->
             <EditText
                 android:id="@+id/edit_supplier_phone"
                 android:hint="@string/hint_supplier_phone"
                 android:inputType="numberDecimal"
-                style="@style/EditorFieldStyle" />
+                style="@style/EditorFieldStyle"
+                android:imeOptions="actionDone"/>
         </LinearLayout>
     </LinearLayout>
+    <Button
+        android:id="@+id/increase_quantity_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorAccent"
+        android:textColor="@android:color/white"
+        android:layout_marginBottom="5dp"
+        android:text="Increase Quantity (+1)" />
+
+    <Button
+        android:id="@+id/decrease_quantity_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorAccent"
+        android:textColor="@android:color/white"
+        android:layout_marginBottom="5dp"
+        android:text="Decrease Quantity (-1)" />
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -114,4 +137,5 @@
         android:textColor="@android:color/white"
         android:layout_marginBottom="5dp"
         android:text="Email Supplier"/>
+
 </LinearLayout>
