--- a/app/src/main/res/layout/activity_editor.xml
+++ b/app/src/main/res/layout/activity_editor.xml
@@ -141,7 +141,7 @@
         android:textColor="@android:color/white"
         android:layout_marginBottom="5dp"
         android:layout_marginTop="16dp"
-        android:text="Call Supplier" />
+        android:text="Call Supplier"/>
 
     <Button
         android:layout_width="match_parent"
@@ -149,6 +149,7 @@
         android:background="@color/colorAccent"
         android:textColor="@android:color/white"
         android:layout_marginBottom="5dp"
-        android:text="Email Supplier"/>
+        android:text="Email Supplier"
+        android:onClick="emailSupplier"/>
 
 </LinearLayout>
